update sidebar navigation background color

--- a/public/css/app/custom.css
+++ b/public/css/app/custom.css
@@ -1,5 +1,5 @@
 .fi-sidebar-nav {
-    background-color: aqua;
+    background-color: rgb(18, 102, 228);
     border-radius: 0.5rem;
     padding: 1rem;    
 }
