--- a/public/css/app/custom.css
+++ b/public/css/app/custom.css
@@ -1,5 +1,17 @@
+/* php artisan filament:assets  */
+/* .fi-topbar > nav {
+    background-color: #055980;
+    background-color: linear-gradient(180deg, #1e5799 0%, #7db9e8 100%);
+}
+
+header.fi-sidebar-header {
+    background-color: #e45c5c;
+} */
+
 .fi-sidebar-nav {
-    /* gradian color blue - gray */
+    /* gradie blue - gray */
+    background-color: #f7f7f7;
     background: linear-gradient(180deg, #1e5799 0%, #7db9e8 100%);
     border-radius: 0.5rem;
+    padding: 1rem;
 }
